--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,13 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# html ( priviate chat history)
+.html
+
+# private chat txt
+*_chat.txt
+
+# private worldcloud png
+*_wordcloud.png
+
